--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
             </nav>
           </div>
           <div class="calendar">121231231</div>
+          <div class="interval-title">
+            <div>
+              <h2>Time Selector</h2>
+              <span>Choose a time period to plan your task</span>
+            </div>
+            <div>
+              <a href="#"><i class="gear"></i></a>
+            </div>
+          </div>
 
           <div class="interval">
             <div class="interval-top">
